prow/cluster/prow-test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prow-test-pods
---
apiVersion: v1
kind: Namespace
metadata:
  name: prowjob
