prow/cluster/ingress-route.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: prow-ingress-route
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  virtualhost:
    fqdn: prow.chulifelogger.tw
    #tls:
      #secretName: prow-tls
  routes: 
    - match: /
      services:
        - name: deck
          port: 80
          permitInsecure: true
    - match: /hook
      services: 
        - name: hook
          port: 8888
          permitInsecure: true
